Fix SonarCloud critical security issues: command injection and resource leaks
Co-authored-by: shijl0925 <3942793+shijl0925@users.noreply.github.com>